fix: increase topnav z-index for wallet styles

--- a/wallet/static/wallet/css/styles.css
+++ b/wallet/static/wallet/css/styles.css
@@ -4,7 +4,7 @@ a {
 }
 
 .topnav {
-  z-index: 999;
+  z-index: 10000;
 }
 
 .wallet__container {
